# portfolio-analysis

./: .dockerignore  .gitignore  AGENTS.md  README.md  azure.yaml
.github/: copilot-instructions.md
Documentation/: agent-orchestration.md  analysis-agent.md  azd-deployment.md  backend.md  candidate-agent.md  frontend.md  index.md  multi-agent-orchestration.md  portfolio-assistant.md  publishing-teams-m365.md  recommendation-agent.md  testing-deployed-agents.md
agents/: requirements.txt
agents/analysis/: Dockerfile  agent.yaml  main.py
agents/candidate/: Dockerfile  agent.yaml  main.py
agents/portfolio-assistant/: Dockerfile  agent.yaml  main.py  requirements.txt
agents/recommendation/: Dockerfile  agent.yaml  main.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/foundry/: Dockerfile  agent-metadata.yaml  deploy.sh  entrypoint.py
backend/src/agents/: __init__.py  distributed.py  executors.py  orchestrator.py  remote.py
backend/src/api/: main.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_asset_allocation.py  test_concentration.py  test_fees.py  test_normalise.py  test_overlap.py  test_parsing.py  test_scoring.py  test_sector_exposure.py  test_workflows.py
frontend/: Cargo.toml  Dockerfile
frontend/src/: app.rs  main.rs  models.rs  parsing.rs
infra/: abbreviations.json  main.bicep  main.parameters.json
infra/core/: acr-pull-role-assignment.bicep  ai-foundry-role-assignment.bicep  ai-foundry.bicep  container-app.bicep  container-apps-environment.bicep  container-registry.bicep  monitoring.bicep
(+23 files in other folders)
